2004-06-11  Lluis Sanchez Gual  <lluis@ximian.com>

	* CodeCompletion/CompletionWindow.cs: Make sure that EndAtomicUndo is called
	  when the completion list is empty. This should definitely fix the undo
	  issue.

2004-06-11  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/CompletionWindow.cs: pretty sure this is the undo
	bug that has people all freaked out (for good reason). well, one of the
	two changed lines is, the other is just to be a bit more correct.

2004-06-10  John BouAntoun  <jba-mono@optusnet.com.au>

	* Gui/Dialogs/ReplaceInFilesDialog.cs: Fix ReplaceInFilesDialog to 
	make it show instead of crashing MD, also made the '...' browse 
	button pick up current path or use default project path in the 
	folder selection dialog it opens up.

2004-06-10  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorBuffer.cs: use the win32 dll name that gtk-sharp
	uses for coherence.
	* Makefile.am: properly install .dll.config
	* MonoDevelop.SourceEditor.dll.config: new mapping file
	* Search/DocumentIterator/WholeProjectDocumentIterator.cs: remove
	warning

2004-06-10  John BouAntoun  <jba-mono@optusnet.com.au>
	* Gui/Dialogs/GotoLineNumberDialog.cs: made dialog close on pressing
	escape key.

2004-06-10  John BouAntoun  <jba-mono@optusnet.com.au>
	* Gui/SourceEditorBuffer.cs: Added g_utf8_validate check to LoadText, 
	refactored LoadText and LoadFile usage
	* Search/DefaultFind.cs: Added check for empty string .Text property
	of a source buffer in find routine. BuildTextIterator hangs on 
	empty strings for some reason

2004-06-06  John Luke  <jluke@cfl.rr.com>

	* Gui/SourceEditorWidget.cs: set PolicyType.Automatic for scrolling
	fixes bug #58767

2004-05-28  Todd Berman  <tberman@sevenl.net>

	* Gui/OptionPanels/CodeTemplatePanel.cs:
	* CodeCompletion/CompletionWindow.cs: update to reflect gtk-sharp api
	out -> ref change

2004-05-25  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs: Update MonodocResolver for new changes.