@@ -1,3 +1,7 @@
+2004-06-21  Todd Berman  <tberman@off.net>
+
+	* CodeCompletion/CompletionWindow.cs: Small code cleanups.
+
 2004-06-11  Lluis Sanchez Gual  <lluis@ximian.com>
 
 	* CodeCompletion/CompletionWindow.cs: Make sure that EndAtomicUndo is called
